04-built-in-resource-types/GatewayAPI/HTTPRoute.nginx.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-gateway-httproute
  namespace: 04--gatewayapi
spec:
  parentRefs:
    - name: nginx-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-clusterip
          port: 80
